syntax = "proto3";

package org.tasker.common.grpc;

option java_multiple_files = true;
option java_package = "org.tasker.common.grpc";
option java_outer_classname = "ProjectProto";

service ProjectService {
  rpc GetProjectMembersByProjectId(GetProjectMembersRequest) returns (GetProjectMembersResponse);
  rpc ProjectExistsById(ProjectExistsByIdRequest) returns (ProjectExistsByIdResponse);
}

message GetProjectMembersRequest {
  int64 project_id = 1;
}

message GetProjectMembersResponse {
  int64 id = 1;
  repeated string members = 2;
}

message ProjectExistsByIdRequest {
  int64 project_id = 1;
}

message ProjectExistsByIdResponse {
  bool exists = 1;
}
